Expose composed movies in gateway. Remove points from users and moved to shows. Adding users by ids endpoint for api composition.